--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(242,242,242) !important;
+  font-family: Roboto, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 a {
@@ -13,6 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +24,14 @@ a {
     color: white;
     background: black;
   }
+}
+
+.content {
+  max-width: 640px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.wrapper {
+  padding-top: 75px;
 }
