'add comments,commentpost,follow,newspage'

--- a/components/Post/Post.module.scss
+++ b/components/Post/Post.module.scss
@@ -1,9 +1,9 @@
 .title {
   font-weight: 500 !important;
-  letter-size: 22px !important;
+  font-size: 22px !important;
 }
 
 .paper {
-  border-bottom: 30px;
+  margin-bottom: 30px;
   border-radius: 8px !important;
  }
