--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,8 +30,14 @@ a {
   max-width: 640px;
   width: 100%;
   margin: 0 auto;
+
+  &--full {
+    max-width: 1000px;
+  }
 }
 
 .wrapper {
-  padding-top: 75px;
+  display: flex;
+  padding: 0 30px;
+  padding-top: 80px;
 }
