--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -14,12 +14,12 @@
 .avatar {
   margin-left: 15px;
   border-radius: 20% !important;
-  margin-right: 7px;
+  margin-right: 6px;
 }
 
 .penButton {
   min-width: 40px !important;
-  text-transform: 16px !important;
+  text-transform: inherit !important;
   font-size: 16px !important;
   letter-spacing: 0 !important;
 }
@@ -35,22 +35,24 @@
   position: relative;
   margin-right: 15px;
   width: 310px;
+
   svg {
       position: absolute;
       top: 8px;
       left: 10px;
       opacity: 0.3;
     }
+
   input {
     width: 100%;
-    height: 38px;
-    border: 0;
+    height: 40px;
     border-radius: 10px;
     background-color: rgba(0,0,0,0.05);
     font-size: 16px;
-    padding-let: 40px;
+    padding-left: 40px;
     transition: all 0.1s ease-in-out;
     border: 1px solid transparent;
+
     &:hover,
     &:focus {
       background-color: #fff;
