--- a/components/LeftMenu/LeftMenu.module.scss
+++ b/components/LeftMenu/LeftMenu.module.scss
@@ -1,8 +1,7 @@
 .menu {
-  position: fixed;
+  position: sticky;
   width: 200px;
-  left: 15px;
-  top: 70px;
+  top: 80px;
 
   ul {
     list-style: none;
@@ -10,15 +9,22 @@
     margin: 0;
 
   li {
-      margin-bottom: 2px;
+      margin-bottom: 4px;
 
       button {
         width: 100%;
         display: flex;
         justify-content: flex-start;
         text-transform: inherit;
+        padding: 10px;
         font-size: 16px;
         font-weight: 400;
+        box-shadow: none;
+
+        span[class*='MuiButton-label'] {
+          display: flex;
+          align-items: center;
+        }
 
         svg {
           margin-right: 10px;
