--- a/components/Comment/Comment.module.scss
+++ b/components/Comment/Comment.module.scss
@@ -1,7 +1,7 @@
 .comment {
   margin-bottom: 20px;
   padding-bottom: 5px;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .userInfo {
@@ -12,7 +12,7 @@
     width: 30px;
     height: 30px;
     border-radius: 30px;
-    border: 1px solid rgba(0,0,0,0.05);
+    border: 1px solid rgba(0, 0, 0, 0.05);
     margin-right: 10px;
   }
 
