--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -37,17 +37,17 @@
   width: 310px;
 
   svg {
-      position: absolute;
-      top: 8px;
-      left: 10px;
-      opacity: 0.3;
-    }
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    opacity: 0.3;
+  }
 
   input {
     width: 100%;
     height: 40px;
     border-radius: 10px;
-    background-color: rgba(0,0,0,0.05);
+    background-color: rgba(0, 0, 0, 0.05);
     font-size: 16px;
     padding-left: 40px;
     transition: all 0.1s ease-in-out;
@@ -56,7 +56,7 @@
     &:hover,
     &:focus {
       background-color: #fff;
-      border-color: darken(#FFF4e2,15%);
+      border-color: darken(#FFF4e2, 15%);
       box-shadow: 0 0 0 3px rgb(229 160 64 / 12%);
     }
   }
